--- a/packages/grid/package.json
+++ b/packages/grid/package.json
@@ -30,18 +30,18 @@
   },
   "dependencies": {
     "@types/scroller": "^0.1.1",
-    "konva": "^7.0.4",
-    "react-konva": "^16.13.0-5",
+    "konva": "^7.2.2",
+    "react-konva": "^17.0.1-3",
     "scroller": "^0.0.3",
     "tiny-invariant": "^1.1.0"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": ">16.13.1",
+    "react-dom": ">16.13.1"
   },
   "devDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "gitHead": "272c80dcd474a9346b6927b356d37917cfcd7c84"
 }
