--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -11,8 +11,7 @@
     "postpublish": "yarn deploy-storybook"
   },
   "dependencies": {
-    "@rowsncolumns/export": "^7.0.4",
     "@rowsncolumns/grid": "^6.2.17",
-    "@rowsncolumns/spreadsheet": "^7.0.4"
+    "react-use": "^15.3.8"
   }
 }
