--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     strategy:
       matrix:
         node-version: [12.x]
@@ -16,6 +18,6 @@ jobs:
       - run: yarn
       - run: yarn build
       - run: yarn test
-      - run: yarn workspace @rowsncolumns/storybook run deploy-storybook -- --ci --host-token-env-variable=GITHUB_TOKEN
+      - run: yarn workspace @rowsncolumns/storybook run deploy-storybook -- --ci
         env:
           CI: true
