--- a/examples/zustand/package.json
+++ b/examples/zustand/package.json
@@ -8,10 +8,10 @@
     "start": "parcel index.html"
   },
   "dependencies": {
-    "@rowsncolumns/grid": "^6.2.17",
+    "@rowsncolumns/grid": "file:../../packages/grid",
     "namor": "^2.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "zustand": "^3.0.0"
   },
   "devDependencies": {
