--- a/package.json
+++ b/package.json
@@ -25,32 +25,32 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.9.0",
-    "@storybook/react": "^6.2.9",
-    "@storybook/storybook-deployer": "^2.8.7",
-    "@testing-library/react": "^10.0.4",
-    "@testing-library/react-hooks": "^3.2.1",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^26.0.0",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "babel-loader": "^8.1.0",
-    "canvas": "^2.6.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "babel-jest": "^29.4.3",
+    "canvas": "^2.11.0",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "lerna": "^3.20.2",
     "lint-staged": "^10.2.4",
     "prettier": "^2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-test-renderer": "^16.13.1",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0.2"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   },
   "resolutions": {
-    "prettier": "^2.0.5"
+    "prettier": "2.2.1"
   },
   "dependencies": {
     "@babel/plugin-transform-runtime": "^7.10.5",
