--- a/examples/react-table/package.json
+++ b/examples/react-table/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.10.1",
+    "@types/react-table": "^7.7.14",
     "parcel-bundler": "^1.12.4"
   }
 }
