--- a/examples/zustand/package.json
+++ b/examples/zustand/package.json
@@ -8,7 +8,7 @@
     "start": "parcel index.html"
   },
   "dependencies": {
-    "@rowsncolumns/grid": "file:../../packages/grid",
+    "@rowsncolumns/grid": "^9.0.0",
     "namor": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
