--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -5,25 +5,24 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "storybook": "storybook dev -p 6006",
+    "storybook": "start-storybook -p 9002 -s ./public",
     "build-storybook": "storybook build -c .storybook -o .out",
     "deploy-storybook": "storybook-to-ghpages",
     "postpublish": "yarn deploy-storybook"
   },
   "dependencies": {
-    "@rowsncolumns/grid": "^9.0.0",
+    "@rowsncolumns/grid": "^9.0.0",    
     "konva": "^8.4.2",
     "react-konva": "^18.2.5",
     "react-use": "^15.3.8"
   },
   "devDependencies": {
-    "@storybook/blocks": "^7.0.0-alpha.8",
-    "@storybook/react": "^7.0.0-beta.59",
-    "@storybook/react-webpack5": "^7.0.0-beta.59",
+    "@storybook/blocks": "latest",
+    "@storybook/react": "^6.5.16",
     "@storybook/storybook-deployer": "^2.8.16",
-    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/testing-library": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.0-beta.59"
+    "storybook": "^6.5.16"
   }
 }
